--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import 'font-variation'
+@layer base {
+  :root {
+    --setting-bold-H1: "opsz" 36, "slnt" 0, "GRAD" 0, "XTRA" 468, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514, "YTUC" 712;
+    --stretch-bold-H1: 32%;
+    --setting-squash-H1: "opsz" 48, "slnt" 0, "GRAD" 0, "XTRA" 468, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514, "YTUC" 712;
+    --stretch-squash-H1: 140%;
+    --setting-squash-H4: "opsz" 48, "slnt" 0, "GRAD" 0, "XTRA" 468, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514, "YTUC" 712;
+    --stretch-squash-H4: 140%;
+  }
+}
