--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,5 +9,7 @@
     --stretch-squash-H1: 140%;
     --setting-squash-H4: "opsz" 48, "slnt" 0, "GRAD" 0, "XTRA" 468, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514, "YTUC" 712;
     --stretch-squash-H4: 140%;
+    --setting-squash-H6: "opsz" 48, "slnt" 0, "GRAD" 0, "XTRA" 468, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514, "YTUC" 712;
+    --stretch-squash-H6: 138%;
   }
 }
