chore: 💄 add bubble image

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 @layer base {
   :root {
+    --setting-arrow: "opsz" 36, "slnt" 0, "GRAD" 0, "XTRA" 468, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514, "YTUC" 712, "XOPQ" 96;
+    --stretch-arrow: 138%;
     --setting-bold-H1: "opsz" 36, "slnt" 0, "GRAD" 0, "XTRA" 468, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514, "YTUC" 712;
     --stretch-bold-H1: 32%;
     --setting-squash-H1: "opsz" 48, "slnt" 0, "GRAD" 0, "XTRA" 468, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514, "YTUC" 712;
